<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.search.SearchParameterFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/ic_arrow_left"
            style="@style/title.3"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/title_main"
            app:layout_constraintTop_toTopOf="@id/title_main"/>

    <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/search_parameter"
            android:layout_margin="@dimen/X2_fab_margin"
            style="@style/title.2"/>

    <TextView
            android:id="@+id/title_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:layout_marginTop="@dimen/X2_fab_margin"
            app:layout_constraintTop_toBottomOf="@id/title_main"
            app:layout_constraintStart_toStartOf="@id/film_serial_switcher"
            style="@style/title.3"/>

    <RadioGroup
            android:id="@+id/film_serial_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/title_show"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <RadioButton
                android:id="@+id/radio0"
                android:layout_width="120dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/left_radio_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:text="@string/all"
                android:textColor="@color/chip_text_color_selector"/>

        <RadioButton
                android:id="@+id/radio1"
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/chip_background_selector"
                android:button="@android:color/transparent"
                android:text="@string/films"
                android:checked="true"
                android:foreground="@drawable/chip_flat_selected"
                android:textColor="@color/chip_text_color_selector"/>

        <RadioButton
                android:id="@+id/radio2"
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/right_radio_selector"
                android:button="@android:color/transparent"
                android:text="@string/serials"
                android:textColor="@color/chip_text_color_selector"/>
    </RadioGroup>

    <TextView
            android:id="@+id/title_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strana"
            android:layout_marginTop="@dimen/_48dp"
            android:layout_marginStart="@dimen/X2_fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/film_serial_switcher"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/title.3_black"/>

    <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Russia"
            android:layout_marginTop="@dimen/_48dp"
            android:layout_marginEnd="@dimen/X2_fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/film_serial_switcher"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/title.3"/>

    <com.google.android.material.internal.BaselineLayout
            android:id="@+id/baseline1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/title_country"
            android:background="@color/gray"/>

    <TextView
            android:id="@+id/title_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:layout_marginStart="@dimen/X2_fab_margin"
            android:layout_marginEnd="@dimen/X2_fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/baseline1"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/title.3_black"/>

    <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comedy"
            android:layout_marginStart="@dimen/X2_fab_margin"
            android:layout_marginEnd="@dimen/X2_fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/baseline1"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/title.3"/>

    <com.google.android.material.internal.BaselineLayout
            android:id="@+id/baseline2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/title_genre"
            android:background="@color/gray"/>

    <TextView
            android:id="@+id/title_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:layout_marginStart="@dimen/X2_fab_margin"
            android:layout_marginEnd="@dimen/X2_fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/baseline2"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/title.3_black"/>

    <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:layout_marginStart="@dimen/X2_fab_margin"
            android:layout_marginEnd="@dimen/X2_fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/baseline2"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/title.3"/>

    <com.google.android.material.internal.BaselineLayout
            android:id="@+id/baseline3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/title_year"
            android:background="@color/gray"/>

    <TextView
            android:id="@+id/title_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:layout_marginStart="@dimen/X2_fab_margin"
            android:layout_marginEnd="@dimen/X2_fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/baseline3"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/title.3_black"/>

    <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/does_not_matter"
            android:layout_marginStart="@dimen/X2_fab_margin"
            android:layout_marginEnd="@dimen/X2_fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/baseline3"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/title.3"/>

    <com.google.android.material.slider.RangeSlider
            android:id="@+id/range_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="10.0"
            android:layout_margin="@dimen/fab_margin"
            app:values="@array/slider_values"
            app:layout_constraintTop_toBottomOf="@+id/rate"/>

    <com.google.android.material.internal.BaselineLayout
            android:id="@+id/baseline4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/range_slider"
            android:background="@color/gray"/>

    <TextView
            android:id="@+id/title_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/baseline4"
            app:layout_constraintStart_toStartOf="@id/film_serial_switcher"
            style="@style/title.3"/>

    <RadioGroup
            android:id="@+id/sorting_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/title_sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <RadioButton
                android:id="@+id/sort_by_date"
                android:layout_width="120dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/left_radio_selector"
                android:button="@android:color/transparent"
                android:text="@string/date"
                android:checked="true"
                android:textColor="@color/chip_text_color_selector"/>

        <RadioButton
                android:id="@+id/sort_by_popular"
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/chip_background_selector"
                android:button="@android:color/transparent"
                android:text="@string/popular"
                android:checked="true"
                android:foreground="@drawable/chip_flat_selected"
                android:textColor="@color/chip_text_color_selector"/>

        <RadioButton
                android:id="@+id/sort_by_rate"
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/right_radio_selector"
                android:button="@android:color/transparent"
                android:text="@string/rate"
                android:textColor="@color/chip_text_color_selector"/>

    </RadioGroup>

    <com.google.android.material.internal.BaselineLayout
            android:id="@+id/baseline5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/X2_fab_margin"
            app:layout_constraintTop_toBottomOf="@id/sorting_switcher"
            android:background="@color/gray"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_viewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/X2_fab_margin"
            app:layout_constraintTop_toTopOf="@id/button_of_viewed"
            app:layout_constraintBottom_toBottomOf="@id/button_of_viewed"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/ic_unviewed"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_viewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unviewed"
            android:layout_marginStart="@dimen/X2_fab_margin"
            app:layout_constraintTop_toTopOf="@id/ic_viewed"
            app:layout_constraintStart_toEndOf="@id/ic_viewed"
            app:layout_constraintBottom_toBottomOf="@id/ic_viewed"
            style="@style/title.3_black"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_of_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:layout_marginTop="@dimen/X2_fab_margin"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/film_serial_switcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_of_genre"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_of_year"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_of_viewed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/baseline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>