<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.search.ChooseDateFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/ic_arrow_left"
                    style="@style/title.3"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_period"
                    android:gravity="center"
                    android:layout_margin="@dimen/fab_margin"
                    app:layout_constraintTop_toTopOf="@+id/button_back"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/title.2" app:layout_constraintBottom_toBottomOf="@+id/button_back"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:id="@+id/title_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_from"
                    android:gravity="center"
                    android:layout_margin="@dimen/fab_margin"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/title.3"/>

            <com.app.skillcinema.utils.DatePickerYear
                    android:id="@+id/from_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/title_from"
                    android:layout_margin="@dimen/fab_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/title_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_date"
                    android:gravity="center"
                    android:layout_margin="@dimen/fab_margin"
                    app:layout_constraintTop_toBottomOf="@id/from_date_picker"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/title.3"/>

            <com.app.skillcinema.utils.DatePickerYear
                    android:id="@+id/to_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/title_to"
                    android:layout_margin="@dimen/fab_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/title_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_date"
                    android:gravity="center"
                    android:layout_margin="@dimen/fab_margin"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/to_date_picker"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/title.3"/>


            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_done"
                    android:enabled="true"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/_48dp"
                    app:layout_constraintTop_toBottomOf="@+id/to_date_picker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/background_button_date_id_done_selector"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>

