<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.seasons_detail.SerialFragment"
        android:layout_margin="@dimen/fab_margin"
        android:id="@+id/relative">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/ic_arrow_left"
            style="@style/title.3"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:gravity="center"
            style="@style/title.2"
            tools:text="@string/actors"
            app:layout_constraintTop_toTopOf="@id/button_back"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_of_seasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Season"
            app:layout_constraintTop_toBottomOf="@+id/button_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/scroll"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            style="@style/title.2"
            app:layout_constraintBottom_toTopOf="@id/view_pager"
            android:layout_margin="@dimen/fab_margin"/>
    <HorizontalScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/title_of_seasons"
            app:layout_constraintTop_toTopOf="@id/title_of_seasons"
            app:layout_constraintBottom_toBottomOf="@id/title_of_seasons"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </HorizontalScrollView>

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/title_of_seasons"
            tools:listitem="@layout/fragment_viewpager_episodes_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/baseline"/>
    <com.google.android.material.internal.BaselineLayout
            android:id="@+id/baseline"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/view_pager"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
